objects/items_Best_ITE_SharePoint_Online__x.object
<CustomObject>
    <externalDataSource>Best_ITE_SharePoint_Online</externalDataSource>
    <externalName>items_Best_ITE_SharePoint_Online</externalName>
    <fields>
        <fullName>Author__c</fullName>
        <externalDeveloperName>Author</externalDeveloperName>
        <label>Author</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <externalDeveloperName>Comment</externalDeveloperName>
        <label>Comment</label>
        <length>32000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContentLength__c</fullName>
        <externalDeveloperName>ContentLength</externalDeveloperName>
        <label>ContentLength</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreationDate__c</fullName>
        <externalDeveloperName>CreationDate</externalDeveloperName>
        <label>CreationDate</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DownloadUrl__c</fullName>
        <externalDeveloperName>DownloadUrl</externalDeveloperName>
        <label>DownloadUrl</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IsFolder__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsFolder</externalDeveloperName>
        <label>IsFolder</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MimeType__c</fullName>
        <externalDeveloperName>MimeType</externalDeveloperName>
        <label>MimeType</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up related to Opportunity</description>
        <externalDeveloperName>SALESFORCEID</externalDeveloperName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>SharePoint_Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <externalDeveloperName>ParentId</externalDeveloperName>
        <label>ParentId</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALESFORCEID__c</fullName>
        <description>External field related to custom field SALESFORCEID in SharePoint Online</description>
        <externalDeveloperName>SALESFORCEID</externalDeveloperName>
        <label>SALESFORCEID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdateDate__c</fullName>
        <externalDeveloperName>UpdateDate</externalDeveloperName>
        <label>UpdateDate</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UpdatedBy__c</fullName>
        <externalDeveloperName>UpdatedBy</externalDeveloperName>
        <label>UpdatedBy</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <label>items_Best_ITE_SharePoint_Online</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>UpdateDate__c</columns>
        <columns>UpdatedBy__c</columns>
        <columns>Id</columns>
        <columns>SALESFORCEID__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_My_Updated_Files</fullName>
        <columns>Name__c</columns>
        <columns>UpdateDate__c</columns>
        <columns>UpdatedBy__c</columns>
        <columns>Id</columns>
        <columns>SALESFORCEID__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UpdatedBy__c</field>
            <operation>contains</operation>
            <value>Joey</value>
        </filters>
        <label>All My Updated Files</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>items_Best_ITE_SharePoint_Online</pluralLabel>
</CustomObject>